--- a/ui/src/app/wb-dashboard/wb-dashboard.component.html
+++ b/ui/src/app/wb-dashboard/wb-dashboard.component.html
@@ -1,5 +1,6 @@
 <div class="dashboard-header row">
-  <div class="dashboard-title col-md-12"> Welcome!</div>
+  <div class="dashboard-title col-md-12"> Welcome!  <span style="float:right"><button class="upload" [routerLink]="['/Home/Upload']" style="float:right">Upload Documents</button></span>
+  </div>
 </div>
 <div class="dashboard-status row">
   <div class="dashboard-status-header col-md-8">
@@ -24,5 +25,6 @@
     </div>
   </div>
 </div>
+
 <div class="row">
 </div>
